--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,16 @@ sqlalchemy==2.0.23
 psycopg2-binary==2.9.9
 python-dotenv==1.0.0
 pydantic==2.5.2
+pydantic-settings==2.1.0
 python-jose==3.3.0
 passlib==1.7.4
-python-multipart==0.0.6
-bcrypt==4.0.1 
+python-multipart==0.0.9
+bcrypt==4.0.1
+alembic==1.12.1
+email-validator==2.1.0.post1
+python-dateutil==2.8.2
+requests==2.31.0
+pytest==7.4.3
+httpx==0.25.1
+pytest-asyncio==0.21.1
+aiosqlite==0.19.0 
