--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,40 @@
-venv/
+# Scripts de utilidad
+/scripts/
+/scripts/*
+node_modules/
+
+# Python
 __pycache__/
-*.pyc
+*.py[cod]
+*$py.class
+*.so
+.Python
+env/
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
 .env
+.venv
+venv/
+ENV/
+
+# IDE
+.idea/
+.vscode/
+*.swp
+*.swo
 .DS_Store
 *.log
 .idea/
