App en produccion version 1.0

--- a/.gitignore
+++ b/.gitignore
@@ -39,4 +39,9 @@ ENV/
 *.log
 .idea/
 .vscode/
-*.sqlite3 
+*.sqlite3
+
+# Ignore environment configuration files
+.env* 
+# No incluir la carpeta de Docker Secrets en el repositorio
+/secrets/
