Subida adocker hub

--- a/docker-compose.unified.yml
+++ b/docker-compose.unified.yml
@@ -1,9 +1,9 @@
 version: '3.9'
 
 services:
-  domino_app:
+  domino-parejas:
     container_name: domino-parejas
-    image: joanalba/domino_app:latest
+    image: joanalba/domino-parejas:latest
     platform: linux/amd64
     ports:
       - "80:80"      # frontend
@@ -13,7 +13,7 @@ services:
     environment:
       - ENV=production
       - APP_ENV=production
-      - DATABASE_URL=postgresql://postgres:$$(cat /app/secrets/db_password.txt)@db:5432/domino
+      - DATABASE_URL=postgresql://postgres:$$(cat /app/secrets/db_password.txt)@db:5432/domino_parejas
       - CORS_ORIGINS=http://localhost,http://localhost:80
       - SECRET_KEY=$$(cat /app/secrets/secret_key.txt)
       - JWT_SECRET_KEY=$$(cat /app/secrets/jwt_secret_key.txt)
@@ -25,7 +25,7 @@ services:
       start_period: 40s
     restart: unless-stopped
     networks:
-      - domino_net
+      - domino-net
     depends_on:
       db:
         condition: service_healthy
@@ -33,13 +33,13 @@ services:
   db:
     image: postgres:15-alpine
     platform: linux/amd64
-    container_name: domino-db
+    container_name: domino-parejas-db
     ports:
       - "5432:5432"
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=$$(cat /run/secrets/db_password)
-      - POSTGRES_DB=domino
+      - POSTGRES_DB=domino_parejas
     volumes:
       - postgres_data:/var/lib/postgresql/data
       - ./secrets/db_password.txt:/run/secrets/db_password:ro
@@ -51,13 +51,13 @@ services:
       start_period: 10s
     restart: unless-stopped
     networks:
-      - domino_net
+      - domino-net
 
 volumes:
   postgres_data:
-    name: domino_postgres_data
+    name: domino-parejas-data
 
 networks:
-  domino_net:
-    name: domino_network
+  domino-net:
+    name: domino-parejas-network
     external: false 
