--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -2,6 +2,10 @@ server {
     listen 80;
     server_name localhost;
 
+    # Habilitar logs detallados para depuración
+    error_log /var/log/nginx/error.log debug;
+    access_log /var/log/nginx/access.log;
+
     # Configuración para el frontend
     location / {
         root /usr/share/nginx/html;
@@ -9,10 +13,24 @@ server {
         try_files $uri $uri/ /index.html;
     }
 
-    # Configuración para el backend API
-    location /api/ {
-        rewrite ^/api/(.*) /$1 break;
-        proxy_pass http://localhost:8000;
+    # Configuración para recursos estáticos del backend
+    location /static/ {
+        proxy_pass http://127.0.0.1:8000/static/;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_cache_bypass $http_upgrade;
+        proxy_connect_timeout 300s;
+        proxy_read_timeout 300s;
+        proxy_buffers 16 16k;
+        proxy_buffer_size 16k;
+    }
+
+    # Configuración específica para subida de logos
+    location /campeonatos/upload-logo {
+        proxy_pass http://127.0.0.1:8000/campeonatos/upload-logo;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
@@ -21,11 +39,34 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_cache_bypass $http_upgrade;
+        client_max_body_size 10M;
+        proxy_connect_timeout 600s;
+        proxy_send_timeout 600s;
+        proxy_read_timeout 600s;
+        send_timeout 600s;
+    }
+
+    # Configuración para el backend API
+    location /api/ {
+        rewrite ^/api/(.*) /$1 break;
+        proxy_pass http://127.0.0.1:8000;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_cache_bypass $http_upgrade;
+        proxy_connect_timeout 300s;
+        proxy_read_timeout 300s;
+        proxy_buffers 16 16k;  
+        proxy_buffer_size 16k;
     }
 
     # Configuración para las rutas directas del backend
     location /campeonatos/ {
-        proxy_pass http://localhost:8000/campeonatos/;
+        proxy_pass http://127.0.0.1:8000/campeonatos/;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
@@ -34,5 +75,69 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_cache_bypass $http_upgrade;
+        proxy_connect_timeout 300s;
+        proxy_read_timeout 300s;
+        proxy_buffers 16 16k;
+        proxy_buffer_size 16k;
+    }
+    
+    # Añadir otras rutas del backend
+    location /parejas/ {
+        proxy_pass http://127.0.0.1:8000/parejas/;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+    
+    location /mesas/ {
+        proxy_pass http://127.0.0.1:8000/mesas/;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+    
+    location /resultados/ {
+        proxy_pass http://127.0.0.1:8000/resultados/;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+    
+    location /plantillas/ {
+        proxy_pass http://127.0.0.1:8000/plantillas/;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+    
+    # Endpoint de verificación de salud
+    location /health {
+        access_log off;
+        return 200 "Nginx is healthy\n";
+    }
+    
+    # Habilitar CORS para toda la aplicación
+    add_header 'Access-Control-Allow-Origin' '*' always;
+    add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE' always;
+    add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization' always;
+    add_header 'Access-Control-Expose-Headers' 'Content-Length,Content-Range' always;
+    
+    # Manejar preflight OPTIONS
+    if ($request_method = 'OPTIONS') {
+        add_header 'Access-Control-Allow-Origin' '*';
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE';
+        add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization';
+        add_header 'Access-Control-Max-Age' 1728000;
+        add_header 'Content-Type' 'text/plain; charset=utf-8';
+        add_header 'Content-Length' 0;
+        return 204;
     }
 } 
